[package]
name = "hft_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
exlib = { version = "0.1", path = "./exclient/exlib" }
excenter = { version = "0.1", path = "./exclient/excenter" }
# coinmonitor = { version = "0.1", path = "./exclient/coinmonitor", optional = true }
influx_db_client = "0.5"
tokio = { version = "1.21", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
lazy_static = "1.4.0"
parking_lot = { version = "0.11", features = ["send_guard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
env_logger = "0.9"
log = "0.4"
async-trait = "0.1"
anyhow = "1.0"
dyn-clone = "1.0"
warp = "0.3"
rand = "0.8"
base64 = "0.13"
hashbrown = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
smallvec = "1.9.0"
chrono = "0.4"
async-recursion = "1.1.1"

[features]
default = ["ethereum_lp"]
ethereum_lp = [
    "exlib/ethereum", 
    "excenter/ethereum",
    "binance",
    "bybitv5"
]
binance = ["exlib/binance", "excenter/binance"]
bybitv5 = ["exlib/bybitv5", "excenter/bybitv5", "exlib/bybit", "excenter/bybit"]